Fix task groups to always be self-consistent.

BUG=632775
TEST=TaskManagerBrowserTest.*

Review-Url: https://codereview.chromium.org/2195873002
Cr-Commit-Position: refs/heads/master@{#409074}

Former-commit-id: 1c6f3ff833b80b5041d8756a27a465e1bacb7ffa